# Kartoffel

./: .clang-format  .gitignore  CMakeLists.txt  Camera.cpp  Camera.hpp  LICENSE  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp  main.cpp
engine/: CMakeLists.txt
engine/include/kartoffel/: EngineAPI.hpp
engine/include/kartoffel/app/: Application.hpp
engine/include/kartoffel/assets/: AssetManager.hpp  SceneLoader.hpp
engine/include/kartoffel/camera/: Camera.hpp
engine/include/kartoffel/ecs/: ComponentArray.inl  ComponentRegistry.inl  Components.hpp  MeshFactory.hpp  World.hpp
engine/include/kartoffel/ecs/systems/: InputSystem.hpp  MeshCleanupSystem.hpp  PhysicsSystem.hpp  RenderSystem.hpp  ScriptSystem.hpp
engine/include/kartoffel/input/: InputManager.hpp
engine/include/kartoffel/rendering/: Shader.hpp  Texture.hpp
engine/src/app/: Application.cpp  Window.cpp
engine/src/assets/: AssetManager.cpp  SceneLoader.cpp
engine/src/camera/: Camera.cpp
engine/src/ecs/: ComponentRegistry.cpp  Entity.cpp  MeshFactory.cpp  World.cpp
engine/src/ecs/systems/: InputSystem.cpp  MeshCleanupSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp  ScriptSystem.cpp
engine/src/input/: InputManager.cpp
engine/src/rendering/: Renderer.cpp  Shader.cpp  Texture.cpp
game/: CMakeLists.txt
game/assets/models/: floor.glb  monkey.glb
game/assets/scenes/: main.kscene
game/assets/shaders/: triangle.frag  triangle.vert
game/src/: MyGame.cpp  MyGame.hpp  main.cpp
scenes/: main.kscene
shaders/: triangle.frag  triangle.vert
src/: bake_main.cpp  main.cpp
src/app/: Window.cpp  Window.hpp
src/assets/: AssetManager.cpp  AssetManager.hpp  KAsset.hpp  SceneLoader.cpp
src/camera/: Camera.cpp
src/ecs/: ComponentArray.hpp  ComponentArray.inl  ComponentRegistry.cpp  ComponentRegistry.hpp  ComponentRegistry.inl  Components.hpp  Entity.cpp  Entity.hpp  MeshFactory.cpp  MeshFactory.hpp  System.hpp  World.cpp  World.hpp
src/ecs/systems/: InputSystem.cpp  InputSystem.hpp  MeshCleanupSystem.cpp  MeshCleanupSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
src/input/: InputManager.cpp  InputManager.hpp
src/rendering/: Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
tools/: CMakeLists.txt  bake_main.cpp
